chore: update dependencies for cloud_firestore and firebase_core
- Updated cloud_firestore from ^5.5.0 to ^6.0.2 in examples/counter, examples/todo, and flutterfire_gen packages.
- Updated firebase_core from ^3.8.0 to ^4.1.1 in examples/counter, examples/todo, and flutterfire_gen packages.
- Updated pubspec.lock files to reflect the new versions of cloud_firestore and firebase_core across all affected packages.
- Updated CHANGELOG.md in flutterfire_gen and flutterfire_gen_utils to document breaking changes due to the updated dependencies.
- Bumped version numbers to 0.5.1 in flutterfire_gen and flutterfire_gen_utils to indicate the new release.

--- a/packages/flutterfire_gen/pubspec.yaml
+++ b/packages/flutterfire_gen/pubspec.yaml
@@ -1,19 +1,19 @@
 name: flutterfire_gen
 description: flutterfire_gen is a package for automatic code generation for Cloud Firestore. It supports efficient CRUD operations with type-safe interfaces and methods.
-version: 0.5.0
+version: 0.5.1
 homepage: https://github.com/kosukesaigusa/flutterfire_gen
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   analyzer: ">=5.13.0 <7.0.0"
   build: ^2.4.1
-  cloud_firestore: ^5.5.0
+  cloud_firestore: ^6.0.2
   flutter:
     sdk: flutter
   flutterfire_gen_annotation: ^0.4.1
-  flutterfire_gen_utils: ^0.5.0
+  flutterfire_gen_utils: ^0.5.1
   json_annotation: ^4.8.1
   meta: ^1.9.1
   path: ^1.8.3
