--- a/examples/todo/pubspec.yaml
+++ b/examples/todo/pubspec.yaml
@@ -1,15 +1,15 @@
 name: riverpod_generator_todo_example
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.0.1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: '>=3.10.0'
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: ">=3.10.0"
 
 dependencies:
-  cloud_firestore: ^5.5.0
-  firebase_core: ^3.8.0
+  cloud_firestore: ^6.0.2
+  firebase_core: ^4.1.1
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.9
