--- a/packages/flutterfire_gen_utils/pubspec.yaml
+++ b/packages/flutterfire_gen_utils/pubspec.yaml
@@ -1,13 +1,13 @@
 name: flutterfire_gen_utils
 description: flutterfire_gen_utils
-version: 0.5.0
+version: 0.5.1
 homepage: https://github.com/kosukesaigusa/flutterfire_gen
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  cloud_firestore: ^5.5.0
+  cloud_firestore: ^6.0.2
   flutter:
     sdk: flutter
   meta: ^1.9.1
